@@ -1,6 +1,8 @@
 2005-05-16  Albert Chu  <chu11@llnl.gov>
 
 	* Typo fixes.
+
+	* Fix libdir path calculation.
 	
 2005-05-15  Albert Chu  <chu11@llnl.gov>
 
